[package]
name = "vis-a-vis"
description = "A simulator of viral infection spread and viral infection self-containment"
keywords = ["infection", "innate immunity", "interferon", "diffusion","cellular automaton", "kinetic Monte Carlo"]
categories = ["science", "systems biology"]
repository = "https://gitlab.com/kochanczyk/infection"
license = "BSD-3-clause"
version = "1.0.0"
authors = ["Marek Kochanczyk <mkochan@ippt.pan.pl>", "Frederic Grabowski <fgrabows@ippt.pan.pl>"]
edition = "2022"

[dependencies]
rand = { version = "0.8" }
rand_distr = { version = "0.4" }
num_cpus = { version = "1.13" }
threadpool = {version = "1.8" }
png = { version = "0.17" }
cairo-rs = { version = "0.16", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
nom = { version = "7" }

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
